[gd_scene load_steps=3 format=3 uid="uid://bw5rd3vkqwpk4"]

[ext_resource type="Script" path="res://src/ui/menus/pause_menu.gd" id="1_fc8qa"]
[ext_resource type="PackedScene" uid="uid://p2m0x21yemk2" path="res://src/ui/components/StandardButton.tscn" id="2_swutv"]

[node name="PauseMenu" type="CanvasLayer"]
process_mode = 3
script = ExtResource("1_fc8qa")

[node name="ColorRect" type="ColorRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.0705882, 0.0705882, 0.0705882, 0.603922)

[node name="RestartButton" parent="ColorRect" instance=ExtResource("2_swutv")]
layout_mode = 1
offset_left = 888.0
offset_top = 264.0
offset_right = 4739.0
offset_bottom = 1514.0
text = "Restart
"

[node name="ResumeButton" parent="ColorRect" instance=ExtResource("2_swutv")]
layout_mode = 1
offset_left = 879.0
offset_top = 129.0
offset_right = 4730.0
offset_bottom = 1379.0
text = "Resume"

[node name="MainMenuButton" parent="ColorRect" instance=ExtResource("2_swutv")]
layout_mode = 1
offset_left = 893.0
offset_top = 399.0
offset_right = 4744.0
offset_bottom = 1649.0
text = "Main Menu
"
metadata/destination = "res://assets/GUI/MENU/MainMenu.tscn"

[node name="SettingsButton" parent="ColorRect" instance=ExtResource("2_swutv")]
layout_mode = 1
offset_left = 902.0
offset_top = 536.0
offset_right = 4753.0
offset_bottom = 1786.0
text = "Settings
"
metadata/destination = "res://assets/GUI/MENU/MainMenu.tscn"

[node name="SaveLoadButton" parent="ColorRect" instance=ExtResource("2_swutv")]
layout_mode = 1
offset_left = 901.0
offset_top = 672.0
offset_right = 4752.0
offset_bottom = 1922.0
text = "Save/Load
"
metadata/destination = "res://assets/GUI/MENU/MainMenu.tscn"
